feat: Mob 機能の追加（API・Plugin 共通基盤・設計書）
- API 側: GET /api/mob, GET /api/mob/{mobId} を追加。MasterDataDB の mob.boss/mob.enemy/mob.npc を統合し、category クエリでフィルタ可能。MasterDataPayloadJson の FlexibleStringConverter を { ref: "..." } 形式に対応するよう拡張。
- Plugin 側: 共通基盤エンジン（テンプレート/インスタンス管理、tick 駆動 AI、独自ダメージ計算、ヘイト、ノックバック、ドロップ抽選、ProtocolLib パケット表示）を実装。
- 設計書: 00_docs/10_プラグイン設計書/feature/12-mob と 00_docs/20_API設計書/feature/16-mob を新規作成。
- filebase: mob 仮データのプレースホルダ修正、スキーマ定義の整合化、StatusType リンクパス修正。